# tcc-climate-data-pipeline

./: .env.example  .gitignore  README.md  arquitetura.txt  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
airflow/: start_airflow.sh
airflow/dags/: full_pipeline_open_meteo.py
dashboard/: app.py  charts.py  db.py  queries.py
dbt/: dbt_project.yml
dbt/models/example/: gold_daily_summary.sql  gold_daily_summary_history.sql  schema.yml  silver_climate_hourly.sql  silver_climate_hourly_history.sql
dbt/tests/: unique_silver_city_record_time.sql  unique_silver_history_bronze_record_time.sql
etl/ingest/: open_meteo_ingest.py
etl/sync/: __init__.py  sync_to_neon.py
etl/utils/: api_client.py  db_connection.py
init-db/: 01_init_schemas.sql  02_init_bronze_table.sql  03_fix_permissions.sql  04_fix_bronze_timestamps.sql
